desp-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres-container
          image: postgres:16.1
          volumeMounts:
            - name: init-sql-script
              mountPath: /docker-entrypoint-initdb.d
            - name: postgres-pvc
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: init-sql-script
          configMap:
            name: init-sql-configmap
        - name: postgres-pvc
          persistentVolumeClaim:
            claimName: postgres-pvc
